# ChangeLog for net-misc/asterisk-chan_unistim
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-chan_unistim/Attic/ChangeLog,v 1.3 2005/08/27 20:27:25 stkn Exp $

  27 Aug 2005; <stkn@gentoo.org> asterisk-chan_unistim-0.9.2.ebuild:
  Added blocker for >=1.1.0 (does not work with 1.2.0 at the moment)

  10 May 2005; David Holm <dholm@gentoo.org>
  asterisk-chan_unistim-0.9.2.ebuild:
  Added to ~ppc.

*asterisk-chan_unistim-0.9.2 (29 Mar 2005)

  29 Mar 2005; Stefan Knoblich <stkn@gentoo.org> +metadata.xml,
  +files/chan_unistim-0.9.2-gentoo.diff, +asterisk-chan_unistim-0.9.2.ebuild:
  Initial import.
