@@ -1,5 +1,5 @@
-MD5 1387de55dbc6aa05d4e4d432d1819101 asterisk-chan_unistim-0.9.2.ebuild 1040
+MD5 917f0f4d1ea3db95d5c2da7ef53af2b9 asterisk-chan_unistim-0.9.2.ebuild 1226
 MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
-MD5 e17ab1dbafd0ec493a27cf2ee21f8583 ChangeLog 676
-MD5 9ae3094eb04050f9e75039f3b326bac8 files/chan_unistim-0.9.2-gentoo.diff 1367
+MD5 d182b91f1f7be0407a58e75ee2e0d6d4 ChangeLog 838
 MD5 f0678d1843ce2d23377a81330b2e16d4 files/digest-asterisk-chan_unistim-0.9.2 70
+MD5 9ae3094eb04050f9e75039f3b326bac8 files/chan_unistim-0.9.2-gentoo.diff 1367
