@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-chan_unistim/Attic/asterisk-chan_unistim-0.9.2.ebuild,v 1.3 2005/08/27 20:27:25 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-chan_unistim/Attic/asterisk-chan_unistim-0.9.2.ebuild,v 1.4 2005/09/19 18:24:06 stkn Exp $
 
 inherit eutils
 
@@ -12,7 +12,7 @@ SRC_URI="http://mlkj.net/asterisk/${MY_PN}-${PV}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="~ppc x86"
 
 IUSE=""
 
@@ -36,6 +36,13 @@ src_install() {
 	make INSTALL_PREFIX=${D} install config || die "make install failed"
 
 	dodoc README unistim.conf
+
+	# fix permissions
+	if [[ -n "$(egetent group asterisk)" ]]; then
+		einfo "Fixing permissions..."
+		chown -R root:asterisk ${D}etc/asterisk
+		chmod -R u=rwX,g=rX,o= ${D}etc/asterisk
+	fi
 }
 
 pkg_postinst() {
