@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/asterisk-chan_unistim
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-chan_unistim/Attic/ChangeLog,v 1.3 2005/08/27 20:27:25 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-chan_unistim/Attic/ChangeLog,v 1.4 2005/09/19 18:24:06 stkn Exp $
+
+  19 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
+  asterisk-chan_unistim-0.9.2.ebuild:
+  Added code to fix permissions of config files and marked stable on x86.
 
   27 Aug 2005; <stkn@gentoo.org> asterisk-chan_unistim-0.9.2.ebuild:
   Added blocker for >=1.1.0 (does not work with 1.2.0 at the moment)
